--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
   <form ng-controller="MainController">
-  <div marked src="'posts/2014-01-06-my-shell-script.md'" />
+  <div marked src="'posts/2015-02-27-general-linuxmint-resources.html'" />
   </form>
   </body>
 </html>
